public/stylesheets/style.css
/* navbar style */

.dropdown {
  display: none;
}

.top-level-links,
.top-level {
  background-color: #143e87;
  color: white;
  font-size: 17px;
  width: 100%;
  left: 0%;
  line-height: 0em;
  height: 10%;
  position: relative;
  top: 2%;
}
.top-right-links {
  position: relative;
  left: -5%;
}
.link-color {
  color: #143f85;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: inline-block;
  width: 50%;
  float: left;
  position: relative;
  left: -1%;
  height: 5em;
  font-size: 15px;
  line-height: 29px;
}

.nav-buttons-right {
  float: right;
}

li a {
  display: block;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  position: relative;
  top: 27px;
  font-family: "Quattrocento Sans", sans-serif;
}

/* logo style */
#logo-pool {
  font-family: "Passion One";
}

#logo {
  color: #316fd8;
  float: left;
  display: inline-block;
  line-height: 0em;
  font-family: "ABeeZee", sans-serif;
}
#pool-pros {
  position: relative;
  top: -20px;
  left: 40%;
}
strong {
  color: #306ed6 !important;
  font-size: 49px;
}
#montserrat {
  font-family: "Montserrat", sans-serif;
  color: #143f85;
}

#header-hr {
  position: relative;
  width: 100%;
  height: 2px;
  background-color: darkgray;
}

/* search box */
#search-box {
  border-style: groove;
  border-color: #4979d2;
  position: relative;
  display: inline-block;
  float: right;
  left: -3%;
  width: 15%;
  height: 41px;
  top: 22px;
  color: black;
}
.search-link {
  position: absolute;
  top: -28px;
}

/* body-background image */
img {
  width: 100%;
  height: 3em;
  position: relative;
  top: -10px;
}

/* radio selector buttons */
.selector-div {
  position: relative;
  display: block;
  width: 75%;
  height: 20%;
  background-color: #e8e8e8;
  float: left;
  left: 12%;
  margin-right: 25%;
  border-radius: 0.5em;
}

.left-filter-pane {
  width: 50%;
  line-height: 5em;
  color: #306ed6;
}
.right-filter-pane {
  line-height: 2em;
  position: relative;
  top: 2em;
  float: left;
  display: block;
  left: 2%;
}
#filter {
  display: inline-block;
  position: relative;
  top: -1em;
}

#divider {
  border: none;
  height: 4em;
  width: 2px;
}

.radio-btn {
  margin-left: 3%;
}

.radio-link {
  position: relative;
  left: -3%;
  top: 1em;
  display: inline-block;
  top: -37px;
  float: left;
  font-size: 14px;
}
#radio {
  margin-left: 8%;
}

/* main section */
.main-container {
  position: relative;
  left: 12%;
}
.main-section {
  float: left;
  width: 20%;
  max-width: 650px;
  padding: 27px;
  margin-top: 2%;
  margin-left: 27px;
  background: #fff;
  border: 1px solid #ddd;
  border-top-left-radius: 2em;
  border-top-right-radius: 2em;
  position: relative;
  left: 10%;
  display: block;
  text-align: center;
  height: 27em;
}
.card-top-divider {
  height: 0.3px;
}
.email {
  border-style: groove;
  border-color: #65c9ca;
  text-decoration: none;
  padding: 1px;
  margin-left: 14%;
  width: 67%;
}
a {
  display: block;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}
.business {
  position: relative;
  width: 100%;
  text-align: center;
}
.business-header {
  font-weight: bold;
}

/* card contents */

.company-name {
  font-family: "ABeeZee", sans-serif;
  text-align: center;
  font-weight: 100;
  font-size: 20px;
}
.phone {
  font-size: 20px;
  font-weight: 700;
}

.phone-logo {
  color: #4aa8b8;
}
.business-hours,
.cant-talk {
  /* text-align: center; */
  font-size: 15px;
  line-height: 21px;
  height: 2em;
}
.certifications {
  height: 8em;
  font-size: 16px;
  width: 75%;
  line-height: 27px;
  margin-left: 12%;
  letter-spacing: 1px;
}

/* MEDIA QUERIES */

/* ----------- iPhone 6, 6S, 7 and 8 ----------- */

/* Portrait and Landscape */
@media only screen and (max-width: 667px) and (orientation: portrait) {
  .top-level-links {
    display: none;
  }
  #logo {
    color: #316fd8;
    float: left;
    display: inline-block;
    line-height: 0em;
    font-family: "ABeeZee", sans-serif;
    position: relative;
    left: -26%;
    letter-spacing: -1px;
  }
  #montserrat {
    font-family: "Montserrat", sans-serif;
    color: #143f85;
    /* font-size: 40px; */
    letter-spacing: -3px;
    left: -4%;
    position: relative;
  }
  #search-box {
    display: none;
  }
  #header-hr {
    top: -8vh;
  }
  img {
    top: -10vh;
  }
  .selector-div {
    position: relative;
    display: block;
    width: 99%;
    height: 20%;
    background-color: white;
    float: left;
    left: 1%;
    margin-right: 25%;
    margin-bottom: 2%;
    border-color: gray;
    top: 0vh;
    border-style: solid;
    border-width: 0.5px;
  }

  #radio {
    margin-left: 0%;
    top: 19px;
    left: -5%;
  }

  .radio-link {
    position: relative;
    left: -2%;
    top: 1em;
    display: inline-block;
    top: -37px;
    float: left;
    font-size: 25px;
    width: 100%;
    text-align: left;
    color: #1c4080;
    line-height: 15px;
  }
  .left-filter-pane {
    width: 75%;
    line-height: -5em;
    color: #306ed6;
    height: 16vh;
    position: rel;
    top: -17vh;
    left: 0%;
    font-size: 20px;
    width: 98%;
  }

  .right-filter-pane {
    line-height: 0em;
    position: relative;
    top: -2em;
    float: left;
    display: block;
    left: 3%;
    height: 28vh;
  }
  .navigational {
    display: none;
  }

  #filter {
    display: inline-block;
    position: relative;
    top: 4px;
  }
  .number {
    height: 7vh;
    position: relative;
    top: -10vh;
    left: -13%;
  }
  .main-section {
    float: left;
    width: 82%;
    padding-top: 8%;
    margin-left: -8%;
    margin-bottom: 12%;
    background: #fff;
    border: 1px solid #ddd;
    border-top-left-radius: 2em;
    border-top-right-radius: 2em;
    position: relative;
    display: block;
    text-align: center;
    height: 76vh;
  }
  .phone-div {
    background-color: #0366d061;
  }

  .certifications {
    height: 6em;
    font-size: 16px;
    width: 99%;
    line-height: 46px;
    margin-left: 4%;
    letter-spacing: 1px;
    position: absolute;
    border-style: solid;
    border-color: gainsboro;
    left: -4%;
    border-bottom-left-radius: 18px;
    border-bottom-right-radius: 18px;
    background-color: gainsboro;
  }
  #myDropdown {
    position: absolute;
    width: 18em;
    float: left;
    left: -11em;
  }
  .drop-menu {
    display: inline-block;
    position: absolute;
    margin-left: 4%;
  }
  /* ======= drop down button/contents ====== */
  .dropbtn {
    background-color: #3498db;
    color: white;
    padding: 18px;
    margin-bottom: 9vh;
    font-size: 16px;
    border: none;
    cursor: pointer;
    position: relative;
    float: right;
    left: 4em;
    height: 5em;
  }
  /* bars */
  .fa-align-justify:before {
    content: "\f039";
    position: absolute;
    left: 30%;
  }

  .fas {
    left: 44px;
    height: 4vh;
    width: 1em;
    padding: 24px;
    padding-bottom: 31px;
  }

  .dropbtn:hover,
  .dropbtn:focus {
    background-color: #2980b9;
  }

  .dropdown {
    position: relative;
    display: inline-block;
  }

  .dropdown-content {
    display: none;
    position: absolute;
    background-color: #f1f1f1;
    min-width: 160px;
    overflow: auto;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1;
  }
  .drop-items {
    color: red;
  }

  .dropdown-content .drop-items {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
  }

  .dropdown .drop-items:hover {
    background-color: #ddd;
  }

  .show {
    display: block;
  }
}

/* Portrait and Landscape */
@media only screen and (min-width: 768px) and (max-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
  .right-filter-pane {
    line-height: 0em;
    position: relative;
    top: 0em;
    float: left;
    display: inline-block;
    left: 6%;
    width: 100%;
  }
  .left-filter-pane {
    width: 100%;
    line-height: 5em;
    color: #306ed6;
  }
  .radio-link {
    position: relative;
    left: -4%;
    top: 1em;
    display: inline-block;
    top: -7px;
    float: left;
    font-size: 14px;
    margin-left: 4%;
    font-size: 21px;
    border-radius: 1px;
    background-color: #afc5e7;
    color: #1c4080;
  }
  ul {
    width: 56%;
  }
  #radio {
    margin-left: 0%;
    font-size: 21px;
    width: 28%;
  }

  #filter {
    display: inline-block;
    position: relative;
    top: -13px;
    left: -13em;
    float: left;
    font-size: 17px;
  }
  .main-section {
    float: left;
    width: 33.33%;
    /* max-width: 645px; */
    padding: 11px;
    margin-top: 2%;
    margin-left: 27px;
    background: #fff;
    border: 1px solid #ddd;
    border-top-left-radius: 2em;
    border-top-right-radius: 2em;
    position: relative;
    left: 10%;
    display: block;
    text-align: center;
    height: 27em;
  }

  .email {
    background-color: #abc5ea;
  }
  .dropbtn,
  .drop-items {
    display: none;
  }
}

